# kubereats-backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  TODO.md  create_dummy_data.py  docker-compose.sonar.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  sonar-project.properties  vitest.config.ts
.github/workflows/: backend-api-tests.yml  backend-ghcr.yml  backend-sonarqube.yml  ci.yml  notification-service-ci.yml
app/: config.py  database.py  database_init.py  main.py  metrics.py  models.py  schemas.py  services.py  tasks.py  worker.py
app/commands/: consume_order_release.py  dispatch_outbox.py  process_reservations.py  publish_reservation_outbox.py  run_order_consumer.py
app/core/: config.py  dependencies.py  logging.py  metrics.py  rate_limit.py  security.py  time.py
app/models/: kubereats.py  notification.py
deploy/: README.md
docs/: k8s-monitoring.md  recommendation-endpoint-contract.md
k8s/: auth-service.yaml  fuwei-service.yaml  kubereats-public-read.json  merchant-service.yaml  minio-bucket-init.yaml  notification-service.yaml
migrations/: 001_create_auth_tables.sql  001_create_committee_tables.sql  001_create_merchant_tables.sql  001_create_notification_tables.sql  002_menu_dietary_compliance.sql  002_rename_menu_image_id_to_image_url.sql  003_menu_image_url.sql  003_merchant_cooperation_suspension.sql  20260527_order_scheduler.sql  20260601_reservation_diner_details.sql  20260601_reservations.sql
scripts/: migrate.py  verify_gcs.py  wait_for_api.py
test/: api-client.ts  global-setup.ts  openrouter-live.test.ts  recommendation-api.test.ts
tests/: conftest.py  test_api.py  test_auth_service.py  test_committee_service.py  test_cors.py  test_finance_services.py  test_health.py  test_merchant_service.py  test_notification_service.py  test_order_scheduler.py  test_prompt_interpreter.py  test_public_prefix_routes.py  test_reservations.py  test_retry_policy.py  test_tagging.py  test_templates.py  test_time.py  test_worker.py
(+256 files in other folders)
