[project]
name = "kubereats-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-barcode>=0.16.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[tool.uv]
package = true

[project.scripts]
test = "pytest:console_main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true
