[project]
name = "merchant-service"
version = "0.1.0"
description = "KuberEats Merchant Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "pyjwt>=2.10.0",
    "prometheus-client>=0.21.0",
    "google-cloud-storage>=2.18.0",
    "python-multipart>=0.0.20",
    "tzdata>=2025.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
